--- a/client/src/app/user/register/register.component.css
+++ b/client/src/app/user/register/register.component.css
@@ -10,3 +10,11 @@
 .full-width {
     width: 100%;
 }
+
+.mat-form-field, .mat-card-actions {
+    margin-top: 30px;
+}
+
+.error {
+    display: block;
+}
