--- a/client/src/app/user/register/register.component.html
+++ b/client/src/app/user/register/register.component.html
@@ -15,8 +15,17 @@
       </mat-form-field>
 
       <mat-form-field class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" required>
+        <mat-error class="error" *ngIf="email.invalid && (email.dirty || email.touched)">
+          Email is required
+        </mat-error>
+        <mat-error class="error" *ngFor="let error of dtoError.email">{{error}}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
         <mat-label>Password</mat-label>
-        <input matInput formControlName="password" type="password"  required>
+        <input matInput formControlName="password" type="password" required>
         <mat-error class="error" *ngIf="password.invalid && (password.dirty || password.touched)">
           Password is required
         </mat-error>
@@ -26,15 +35,20 @@
       <mat-form-field class="full-width">
         <mat-label>Confirmed Password</mat-label>
         <input matInput formControlName="confirmedPassword" type="password" required>
-        <mat-error class="error" *ngIf="confirmedPassword.invalid && (confirmedPassword.dirty || confirmedPassword.touched)">
+        <mat-error class="error"
+                   *ngIf="confirmedPassword.invalid && (confirmedPassword.dirty || confirmedPassword.touched)">
           Confirmed Password is required
         </mat-error>
         <mat-error class="error" *ngFor="let error of dtoError.confirmedPassword">{{error}}</mat-error>
       </mat-form-field>
 
-      <mat-card-actions>
+      <mat-card-footer>
+        <mat-checkbox color="primary" formControlName="rules">
+          I confirm that I have read and accept the Terms and Privacy Policy of the Website
+        </mat-checkbox>
         <button mat-raised-button color="primary" [disabled]="!registerForm.valid">Register</button>
-      </mat-card-actions>
+      </mat-card-footer>
+
     </form>
   </mat-card-content>
 </mat-card>
