Fix register view and replace validation code by annotations

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,2 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~ngx-toastr/toastr.css';
+
+html {
+  position: relative;
+  min-height: 100%;
+}
