--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,3 +1,8 @@
+header {
+  font-size: 25px;
+  background-color: #3F51B5;
+}
+
 .navbar {
   justify-content: space-between;
 }
@@ -11,9 +16,10 @@ a {
   text-decoration: none;
 }
 
-#footer {
+footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  justify-content: center;
+  color: #FFFFFF;
+  background-color: #3F51B5;
 }
