--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,21 @@
-<mat-toolbar color="primary" class="navbar">
-  <div>
-    <span><a [routerLink]="['/']" routerLinkActive="router-link-active">Home</a></span>
-    <span><a [routerLink]="['/register']" routerLinkActive="router-link-active">Register</a></span>
-  </div>
-</mat-toolbar>
-<router-outlet></router-outlet>
-<mat-toolbar color="primary" id="footer">© 2019 Copyright: Robert Krzywina</mat-toolbar>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <span><a [routerLink]="['/']" routerLinkActive="router-link-active">Home</a></span>
+        <span><a [routerLink]="['/register']" routerLinkActive="router-link-active">Register</a></span>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<section class="container">
+  <router-outlet></router-outlet>
+</section>
+
+<footer class="page-footer">
+  <div class="footer-copyright text-center py-3">© 2019 Copyright: Robert Krzywina</div>
+</footer>
