--- a/client/src/app/user/register/register.component.css
+++ b/client/src/app/user/register/register.component.css
@@ -1,7 +1,7 @@
 .my-card {
   margin: 5% auto;
   width: 40%;
-  height: 580px;
+  height: 500px;
 }
 
 .mat-card-header {
@@ -12,17 +12,12 @@
   width: 100%;
 }
 
-.mat-form-field, .mat-card-footer {
+.mat-form-field {
   margin-top: 30px;
 }
 
-.mat-checkbox {
-  display: block;
-  margin-left: 18px;
-}
-
 button {
-  margin: 40px 0 0 18px;
+  margin: 30px 0 0 17px;
 }
 
 .error {
