--- a/client/src/app/user/register/register.component.html
+++ b/client/src/app/user/register/register.component.html
@@ -1,4 +1,4 @@
-<mat-card class="my-card">
+<mat-card class="my-card col-sm-12">
   <mat-card-header>
     <mat-card-title><h3>Register</h3></mat-card-title>
   </mat-card-header>
@@ -18,7 +18,7 @@
         <mat-label>Email</mat-label>
         <input matInput formControlName="email" required>
         <mat-error class="error" *ngIf="email.invalid && (email.dirty || email.touched)">
-          Email is required
+          <p>Email is required</p>
         </mat-error>
         <mat-error class="error" *ngFor="let error of dtoError.email">{{error}}</mat-error>
       </mat-form-field>
@@ -43,9 +43,6 @@
       </mat-form-field>
 
       <mat-card-footer>
-        <mat-checkbox color="primary" formControlName="rules">
-          I confirm that I have read and accept the Terms and Privacy Policy of the Website
-        </mat-checkbox>
         <button mat-raised-button color="primary" [disabled]="!registerForm.valid">Register</button>
       </mat-card-footer>
 
