--- a/client/src/app/user/register/register.component.html
+++ b/client/src/app/user/register/register.component.html
@@ -18,7 +18,7 @@
         <mat-label>Email</mat-label>
         <input matInput formControlName="email" required>
         <mat-error class="error" *ngIf="email.invalid && (email.dirty || email.touched)">
-          <p>Email is required</p>
+          Email is required
         </mat-error>
         <mat-error class="error" *ngFor="let error of dtoError.email">{{error}}</mat-error>
       </mat-form-field>
