--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,6 +16,6 @@
   <router-outlet></router-outlet>
 </section>
 
-<footer class="page-footer">
+<footer class="page-footer bg-dark">
   <div class="footer-copyright text-center py-3">© 2019 Copyright: Robert Krzywina</div>
 </footer>
