--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,6 +7,7 @@
       <div class="navbar-nav">
         <span><a [routerLink]="['/']" routerLinkActive="router-link-active">Home</a></span>
         <span><a [routerLink]="['/register']" routerLinkActive="router-link-active">Register</a></span>
+        <span><a [routerLink]="['/login']" routerLinkActive="router-link-active">Login</a></span>
       </div>
     </div>
   </nav>
