Add reset credentials on front-end

--- a/client/src/app/user/login/login.component.html
+++ b/client/src/app/user/login/login.component.html
@@ -28,5 +28,9 @@
       </mat-card-footer>
 
     </form>
+    <div class="hrefs">
+      <a [routerLink]="['/register']" routerLinkActive="router-link-active">Don't have account yet?</a><br>
+      <a [routerLink]="['/forgot-credentials']" routerLinkActive="router-link-active">Forgot your credentials?</a>
+    </div>
   </mat-card-content>
 </mat-card>
