--- a/client/src/app/user/login/login.component.css
+++ b/client/src/app/user/login/login.component.css
@@ -1,3 +1,13 @@
 .my-card {
-  height: 330px !important;
+  height: 340px !important;
+}
+
+button {
+  margin: 10px 0 0 17px !important;
+}
+
+.hrefs {
+  height: 50px;
+  width: 400px;
+  margin: 25px 0 0 2px;
 }
