--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-image: url('img/background.jpg');
+  background-image: url('assets/img/background.jpg');
   height: 40em; background-size: cover; width: auto;
   background-position: 50% 50%;
   font-weight: bold;
