Add dashboard and profile for authenticated user

--- a/client/src/app/user/dashboard/dashboard.component.html
+++ b/client/src/app/user/dashboard/dashboard.component.html
@@ -1,6 +1,1 @@
-<p>
-  dashboard works!
-</p>
-<form (ngSubmit)="onLogout()">
-  <button mat-raised-button color="primary">Logout</button>
-</form>
+<h1>{{msg}}</h1>
