--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,10 +4,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div *ngIf="!authService.isAuthenticated()" class="navbar-nav">
         <span><a [routerLink]="['/']" routerLinkActive="router-link-active">Home</a></span>
         <span><a [routerLink]="['/register']" routerLinkActive="router-link-active">Register</a></span>
         <span><a [routerLink]="['/login']" routerLinkActive="router-link-active">Login</a></span>
+      </div>
+      <div *ngIf="authService.isAuthenticated()" class="navbar-nav">
+        <span><a [routerLink]="['/dashboard']" routerLinkActive="router-link-active">Dashboard</a></span>
+        <span><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Profile</a></span>
+        <span><a (click)="authService.logout()" [routerLink]="['./']" routerLinkActive="router-link-active">Logout</a></span>
       </div>
     </div>
   </nav>
