Add change password and email on frontend, fix exception handler

--- a/client/src/app/user/profile/profile.component.html
+++ b/client/src/app/user/profile/profile.component.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-  <button mat-raised-button color="primary">Change password</button>
-  <button mat-raised-button color="primary">Change email</button>
+  <a routerLink="/profile/change-password"><button class="btn btn-success pull-right">Change password</button></a>
+  <a routerLink="/profile/change-email"><button class="btn btn-success pull-right">Change email</button></a>
   <br>
 </div>
