Add ability to create a post, fix logout href

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,7 +14,7 @@
         <span><a [routerLink]="['/dashboard']" routerLinkActive="router-link-active">Dashboard</a></span>
         <span><a [routerLink]="['/forum']" routerLinkActive="router-link-active">Forum</a></span>
         <span><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Profile</a></span>
-        <span><a (click)="authService.logout()" [routerLink]="['./']" routerLinkActive="router-link-active">Logout</a></span>
+        <span><a id="logoutHref" (click)="authService.logout()">Logout</a></span>
       </div>
     </div>
   </nav>
