--- a/client/src/app/forum/forum.component.html
+++ b/client/src/app/forum/forum.component.html
@@ -6,3 +6,5 @@
 <div *ngIf="authService.isAuthenticated()">
   <button mat-raised-button color="primary" routerLink="/forum/add-post">Add post</button>
 </div>
+
+<app-list-post></app-list-post>
