Modified style of forum components

--- a/client/src/app/user/profile/profile.component.html
+++ b/client/src/app/user/profile/profile.component.html
@@ -7,7 +7,7 @@
           <h3>Current: {{profile.experience}} XP</h3>
           <h3>Left to the next level: {{profile.leftExperienceToTheNextLevel}} XP</h3>
         </div>
-        <ngb-progressbar type="success" height="45px" [value]="profile.currentExperienceInPercents"
+        <ngb-progressbar type="info" height="45px" [value]="profile.currentExperienceInPercents"
                          [showValue]="true" [striped]="true" [animated]="true"></ngb-progressbar>
         <div id="details">
           <h3>Username: {{profile.username}}</h3>
