--- a/client/src/app/forum/forum.component.css
+++ b/client/src/app/forum/forum.component.css
@@ -1,3 +1,53 @@
 button {
-  margin-top: 5px;
+  margin: 20px 0;
+  line-height: 34px;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  outline: none !important;
+  width: 100%;
+}
+
+button:active {
+  outline: none;
+}
+
+button.ribbon {
+  outline: none;
+  outline-color: transparent;
+}
+
+button.ribbon:before, button.ribbon:after {
+  top: 5px;
+  z-index: -10;
+}
+
+button.ribbon:before {
+  border-color: #53dab6 #53dab6 #53dab6 transparent;
+  left: -25px;
+  border-width: 17px;
+}
+
+button.ribbon:after {
+  border-color: #53dab6 transparent #53dab6 #53dab6;
+  right: -25px;
+  border-width: 17px;
+}
+
+button:before, button:after {
+  content: '';
+  position: absolute;
+  height: 0;
+  width: 0;
+  border-style: solid;
+  border-width: 0;
+  outline: none;
+}
+
+button.btn-primary:before {
+  border-color: #2e6da4 #2e6da4 #2e6da4 transparent;
+}
+
+button.btn-primary:after {
+  border-color: #2e6da4 transparent #2e6da4 #2e6da4;
 }
