--- a/client/src/app/forum/list-post/list-post.component.css
+++ b/client/src/app/forum/list-post/list-post.component.css
@@ -1,3 +1,27 @@
+.vote {
+  opacity: 0.85;
+  height: 120px;
+  margin-top: 10px;
+  background-color: #E8E8E8;
+}
+
+.post {
+  width: 100%;
+  height: 120px;
+  display: block;
+  opacity: 0.85;
+  margin-top: 10px;
+  background-color: #E8E8E8;
+}
+
+ul {
+  margin-top: 10px;
+}
+
 td {
   color: #FFFFFF;
+}
+
+.nav-link {
+  background-color: #FFFFFF;
 }
