--- a/client/src/app/forum/list-post/list-post.component.html
+++ b/client/src/app/forum/list-post/list-post.component.html
@@ -1,18 +1,22 @@
-<table>
-  <tbody>
-  <tr *ngFor="let post of posts">
-    <td>{{post.id}}</td>
-    <td>{{post.title}}</td>
-    <td>{{post.description}}</td>
-    <td>{{post.date}}</td>
-    <td>{{post.upVote}}</td>
-    <td>{{post.downVote}}</td>
-    <td>{{post.username}}</td>
-  </tr>
-  </tbody>
-  <ul class="nav nav-pills">
-    <li class="nav-item" *ngFor="let p of pages; let i=index">
-      <a class="nav-link" href="#" (click)="setPage(i, $event)" [ngClass]="{'active':i==page}">{{i}}</a>
-    </li>
-  </ul>
-</table>
+<div class="container-fluid">
+  <div class="row no-gutters" *ngFor="let post of posts">
+    <div class="col-3 vote">
+      <app-vote></app-vote>
+    </div>
+    <div class="col-9 post">
+      <h1><a [routerLink]="['/forum']" routerLinkActive="router-link-active">{{post.title}}</a></h1>
+      <h6>{{post.description}}</h6>
+      <p>
+         Created by:&nbsp;<a [routerLink]="['/forum']" routerLinkActive="router-link-active"><u><i>{{post.username}}</i></u></a>
+         Date:&nbsp;{{post.date}}
+      </p>
+
+    </div>
+  </div>
+</div>
+
+<ul class="nav nav-pills">
+  <li class="nav-item" *ngFor="let p of pages; let i=index">
+    <a class="nav-link" href="#" (click)="setPage(i, $event)" [ngClass]="{'active':i==page}">{{i}}</a>
+  </li>
+</ul>
