Add ability to show user profile on frontend

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,7 +13,7 @@
       <div *ngIf="authService.isAuthenticated()" class="navbar-nav">
         <span><a [routerLink]="['/dashboard']" routerLinkActive="router-link-active">Dashboard</a></span>
         <span><a [routerLink]="['/forum']" routerLinkActive="router-link-active">Forum</a></span>
-        <span><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Profile</a></span>
+        <span><a [routerLink]="['/my-profile']" routerLinkActive="router-link-active">Profile</a></span>
         <span><a id="logoutHref" (click)="authService.logout()">Logout</a></span>
       </div>
     </div>
