--- a/client/src/app/user/profile/own/settings/change-email/change-email.component.html
+++ b/client/src/app/user/profile/own/settings/change-email/change-email.component.html
@@ -30,7 +30,7 @@
 
     </form>
     <div class="hrefs">
-      <a [routerLink]="['/profile']" routerLinkActive="router-link-active">Back to your profile</a><br>
+      <a [routerLink]="['/my-profile']" routerLinkActive="router-link-active">Back to your profile</a><br>
     </div>
   </mat-card-content>
 </mat-card>
