--- a/client/src/app/forum/list-post/list-post.component.html
+++ b/client/src/app/forum/list-post/list-post.component.html
@@ -7,7 +7,7 @@
       <h1><a [routerLink]="['/forum']" routerLinkActive="router-link-active">{{post.title}}</a></h1>
       <h6>{{post.description}}</h6>
       <p>
-         Created by:&nbsp;<a [routerLink]="['/forum']" routerLinkActive="router-link-active"><u><i>{{post.username}}</i></u></a>
+         Created by:&nbsp;<a [routerLink]="['/profile', post.username]" routerLinkActive="router-link-active"><u><i>{{post.username}}</i></u></a>
          Date:&nbsp;{{post.date}}
       </p>
 
