--- a/client/src/app/forum/list-post/list-post.component.html
+++ b/client/src/app/forum/list-post/list-post.component.html
@@ -1,10 +1,16 @@
 <div class="container-fluid">
   <div class="row no-gutters" *ngFor="let post of posts">
     <div class="col-3 vote">
-      <app-vote></app-vote>
+      <div id="vote" class="row">
+        <div class="col"><button id="plusBtn" mat-button>+</button></div>
+        <div class="col"><h2>{{post.upVote}}</h2></div>
+        <div class="w-100"></div>
+        <div class="col"><button id="minusBtn" mat-button>-</button></div>
+        <div class="col"><h2>{{post.downVote}}</h2></div>
+      </div>
     </div>
     <div class="col-9 post">
-      <h1><a [routerLink]="['/forum']" routerLinkActive="router-link-active">{{post.title}}</a></h1>
+      <h2><a [routerLink]="['/forum']" routerLinkActive="router-link-active">{{post.title}}</a></h2>
       <h6>{{post.description}}</h6>
       <p>
          Created by:&nbsp;<a [routerLink]="['/profile', post.username]" routerLinkActive="router-link-active"><u><i>{{post.username}}</i></u></a>
