--- a/client/src/app/forum/show-post/show-post.component.html
+++ b/client/src/app/forum/show-post/show-post.component.html
@@ -1,3 +1,23 @@
-<p>
-  show-post works!
-</p>
+<div class="row" id="header">
+  <div class="col-6">
+    <h1>{{post.title}}</h1>
+  </div>
+  <div class="col-6">
+    <h1><a [routerLink]="['/forum']" routerLinkActive="router-link-active">Back to the forum</a></h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-6">
+    <h3>Up Votes: {{post.upVote}}</h3>
+    <h3>Down Votes: {{post.downVote}}</h3>
+  </div>
+  <div class="col-6">
+    <h3>Created by:&nbsp;<a [routerLink]="['/profile', post.username]" routerLinkActive="router-link-active">{{post.username}}</a></h3>
+    <h3>Date: {{post.date}}</h3>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    {{post.description}}
+  </div>
+</div>
