Add comments for selected post

--- a/client/src/app/forum/forum.component.html
+++ b/client/src/app/forum/forum.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="!authService.isAuthenticated()">
-  <h2>U need to <a [routerLink]="['/login']" routerLinkActive="router-link-active">sign in</a> to create, vote and comment posts.</h2>
-  <h2>Don't have account yet? Click <a [routerLink]="['/register']" routerLinkActive="router-link-active">here</a> to register.</h2>
+<div *ngIf="!authService.isAuthenticated()" class="alert alert-warning">
+  <h5>U need to <a [routerLink]="['/login']" routerLinkActive="router-link-active">sign in</a> to create, vote and comment posts.</h5>
+  <h5>Don't have account yet? Click <a [routerLink]="['/register']" routerLinkActive="router-link-active">here</a> to register.</h5>
 </div>
 
 <div *ngIf="authService.isAuthenticated()">
