--- a/client/src/app/forum/list-post/list-post.component.html
+++ b/client/src/app/forum/list-post/list-post.component.html
@@ -20,10 +20,9 @@
       <h2><a [routerLink]="['/forum/post', post.id]" routerLinkActive="router-link-active">{{post.title}}</a></h2>
       <h6>{{post.description}}</h6>
       <p>
-         Created by:&nbsp;<a [routerLink]="['/profile', post.username]" routerLinkActive="router-link-active"><u><i>{{post.username}}</i></u></a>
+         Author:&nbsp;<a [routerLink]="['/profile', post.username]" routerLinkActive="router-link-active"><u><i>{{post.username}}</i></u></a>
          Date:&nbsp;{{post.date}}
       </p>
-
     </div>
   </div>
 </div>
