--- a/client/src/app/forum/show-post/show-post.component.html
+++ b/client/src/app/forum/show-post/show-post.component.html
@@ -21,8 +21,11 @@
 <br>
 <div *ngFor="let comment of comments" class="row comment">
   <div class="col-3 details">
-    <p>Created by:&nbsp;<a [routerLink]="['/profile', comment.username]" routerLinkActive="router-link-active"><u><i>{{comment.username}}</i></u></a></p>
-    <p>Date: {{comment.date}}</p>
+    Created by:&nbsp;<a [routerLink]="['/profile', comment.username]" routerLinkActive="router-link-active"><u><i>{{comment.username}}</i></u></a>
+    <br>
+    Date: {{comment.date}}
+    <br>
+    Time: {{comment.time}}
   </div>
   <div class="col-9">
     <p>{{comment.text}}</p>
@@ -32,4 +35,8 @@
 <div *ngIf="!authService.isAuthenticated()" class="alert alert-warning">
   <h5>U need to <a [routerLink]="['/login']" routerLinkActive="router-link-active">sign in</a> comment posts.</h5>
   <h5>Don't have account yet? Click <a [routerLink]="['/register']" routerLinkActive="router-link-active">here</a> to register.</h5>
+</div>
+
+<div *ngIf="authService.isAuthenticated()">
+  <app-add-comment></app-add-comment>
 </div>
