Add structure of challenges views

--- a/client/src/app/forum/forum.component.html
+++ b/client/src/app/forum/forum.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div *ngIf="authService.isAuthenticated()">
-  <button class="btn btn-primary ribbon" routerLink="/forum/add-post"><h1>Create new post</h1></button>
+  <button class="btn btn-primary ribbon" routerLink="/forum/add-post">Create new post</button>
 </div>
 
 <app-list-post></app-list-post>
