Add ability to make-challenge and add submit-challenge structure

--- a/client/src/app/challenge/challenge.component.html
+++ b/client/src/app/challenge/challenge.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary ribbon">Make a Challenge</button>
+<button class="btn btn-primary ribbon" (click)="makeChallenge()">Make a Challenge</button>
 
 <mat-grid-list cols="2" rowHeight="40rem" [gutterSize]="'10px'">
   <mat-grid-tile>
