--- a/client/src/app/challenge/make-challenge/make-challenge.component.html
+++ b/client/src/app/challenge/make-challenge/make-challenge.component.html
@@ -1,3 +1,19 @@
-<p>
-  make-challenge works!
-</p>
+<h1 mat-dialog-title>Make a Challenge</h1>
+<form [formGroup]="makeChallengeForm" (ngSubmit)="onSubmit(makeChallengeForm)" autocomplete="off">
+  <div mat-dialog-content>
+    <p>Choose rival</p>
+      <mat-form-field>
+        <mat-label>Rival</mat-label>
+        <input matInput formControlName="defenderUsername" required>
+        <mat-error class="error" *ngIf="defenderUsername.invalid && (defenderUsername.dirty || defenderUsername.touched)">
+          Rival username is required
+        </mat-error>
+        <mat-error class="error" *ngFor="let error of dtoError.defenderUsername">{{error}}</mat-error>
+      </mat-form-field>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button (click)="onNoClick()">Back</button>
+    <button mat-button>Ok</button>
+  </div>
+</form>
+
