Add ability to get random rival, but still need to fix

--- a/client/src/app/challenge/make-challenge/make-challenge.component.html
+++ b/client/src/app/challenge/make-challenge/make-challenge.component.html
@@ -9,7 +9,8 @@
       </mat-form-field>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Back</button>
-    <button mat-button>Ok</button>
+    <button mat-raised-button color="primary" (click)="getRandomRival()">Find random rival</button>
+    <button mat-raised-button (click)="onNoClick()">Back</button>
+    <button mat-raised-button>Ok</button>
   </div>
 </form>
