--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,6 +22,6 @@
   </nav>
 </header>
 
-<section class="container">
+<section class="container-fluid">
   <router-outlet></router-outlet>
 </section>
