--- a/client/src/app/user/profile/own/settings/change-password/change-password.component.html
+++ b/client/src/app/user/profile/own/settings/change-password/change-password.component.html
@@ -1,36 +1,27 @@
-<mat-card class="my-card col-sm-12">
-  <mat-card-header>
-    <mat-card-title><h3>Change password</h3></mat-card-title>
-  </mat-card-header>
-  <mat-card-content class="content">
-    <form class="my-form" [formGroup]="changePasswordForm" (ngSubmit)="changePassword(changePasswordForm)" autocomplete="off">
+<h1>Change password</h1>
+<form class="my-form" [formGroup]="changePasswordForm" (ngSubmit)="changePassword(changePasswordForm)" autocomplete="off">
 
-      <mat-form-field class="full-width">
-        <mat-label>New password</mat-label>
-        <input matInput formControlName="password" type="password" required>
-        <mat-error class="error" *ngIf="password.invalid && (password.dirty || password.touched)">
-          Enter new password
-        </mat-error>
-        <mat-error class="error" *ngFor="let error of dtoError.password">{{error}}</mat-error>
-      </mat-form-field>
+  <mat-form-field class="full-width">
+    <mat-label>New password</mat-label>
+    <input matInput formControlName="password" type="password" required>
+    <mat-error class="error" *ngIf="password.invalid && (password.dirty || password.touched)">
+      Enter new password
+    </mat-error>
+    <mat-error class="error" *ngFor="let error of dtoError.password">{{error}}</mat-error>
+  </mat-form-field>
 
-      <mat-form-field class="full-width">
-        <mat-label>Confirm new password</mat-label>
-        <input matInput formControlName="confirmedPassword" type="password" required>
-        <mat-error class="error"
-                   *ngIf="confirmedPassword.invalid && (confirmedPassword.dirty || confirmedPassword.touched)">
-          Re enter new password
-        </mat-error>
-        <mat-error class="error" *ngFor="let error of dtoError.confirmedPassword">{{error}}</mat-error>
-      </mat-form-field>
+  <mat-form-field class="full-width">
+    <mat-label>Confirm new password</mat-label>
+    <input matInput formControlName="confirmedPassword" type="password" required>
+    <mat-error class="error"
+               *ngIf="confirmedPassword.invalid && (confirmedPassword.dirty || confirmedPassword.touched)">
+      Re enter new password
+    </mat-error>
+    <mat-error class="error" *ngFor="let error of dtoError.confirmedPassword">{{error}}</mat-error>
+  </mat-form-field>
 
-      <mat-card-footer>
-        <button mat-raised-button color="primary" [disabled]="!changePasswordForm.valid">Change</button>
-      </mat-card-footer>
+  <mat-card-footer>
+    <button mat-raised-button color="primary" [disabled]="!changePasswordForm.valid">Change</button>
+  </mat-card-footer>
 
-    </form>
-    <div class="hrefs">
-      <a [routerLink]="['/my-profile']" routerLinkActive="router-link-active">Back to your profile</a><br>
-    </div>
-  </mat-card-content>
-</mat-card>
+</form>
