--- a/client/src/app/forum/add-post/add-post.component.html
+++ b/client/src/app/forum/add-post/add-post.component.html
@@ -1,33 +1,23 @@
-<mat-card class="my-card col-sm-12">
-  <mat-card-header>
-    <mat-card-title><h3>Add post</h3></mat-card-title>
-  </mat-card-header>
-  <mat-card-content class="content">
-    <form class="my-form" [formGroup]="addPostForm" (ngSubmit)="addPost(addPostForm)" autocomplete="off">
+<h1 mat-dialog-title>Add post</h1>
+<form class="my-form" [formGroup]="addPostForm" (ngSubmit)="addPost(addPostForm)" autocomplete="off">
 
-      <mat-form-field class="full-width">
-        <mat-label>Title</mat-label>
-        <input matInput formControlName="title" maxlength="50" required>
-        <mat-error class="error" *ngIf="title.invalid && (title.dirty || title.touched)">
-          Title is required
-        </mat-error>
-        <mat-error class="error" *ngFor="let error of dtoError.title">{{error}}</mat-error>
-      </mat-form-field>
+  <div mat-dialog-content>
+    <mat-form-field class="full-width">
+      <mat-label>Title</mat-label>
+      <input matInput formControlName="title" maxlength="50" required>
+      <mat-error class="error" *ngFor="let error of dtoError.title">{{error}}</mat-error>
+    </mat-form-field>
 
-      <mat-form-field class="full-width">
-        <mat-label>Description</mat-label>
-        <textarea matInput formControlName="description" maxlength="255" required rows="4"></textarea>
-        <mat-error class="error" *ngIf="description.invalid && (description.dirty || description.touched)">
-          Description is required
-        </mat-error>
-        <mat-error class="error" *ngFor="let error of dtoError.description">{{error}}</mat-error>
-      </mat-form-field>
+    <mat-form-field class="full-width">
+      <mat-label>Description</mat-label>
+      <textarea matInput formControlName="description" maxlength="255" required rows="4"></textarea>
+      <mat-error class="error" *ngFor="let error of dtoError.description">{{error}}</mat-error>
+    </mat-form-field>
+  </div>
 
-      <mat-card-footer>
-        <button mat-raised-button color="primary" [disabled]="!addPostForm.valid">Add</button>
-        <button mat-raised-button color="primary" routerLink="/forum">Back to the forum</button>
-      </mat-card-footer>
+  <div mat-dialog-actions>
+    <button mat-raised-button color="primary" [disabled]="!addPostForm.valid">Add</button>
+    <button mat-raised-button (click)="onNoClick()">Back</button>
+  </div>
 
-    </form>
-  </mat-card-content>
-</mat-card>
+</form>
