--- a/client/src/app/forum/list-post/list-post.component.html
+++ b/client/src/app/forum/list-post/list-post.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="row no-gutters" *ngFor="let post of posts">
+<div>
+  <div class="row" *ngFor="let post of posts">
     <div class="col-3 vote">
       <div *ngIf="authService.isAuthenticated()" class="row voteElements">
         <div class="col"><button class="plusBtn" mat-button (click)="votePost(post.id, 'YES')">+</button></div>
