--- a/client/src/app/user/profile/own/settings/change-email/change-email.component.css
+++ b/client/src/app/user/profile/own/settings/change-email/change-email.component.css
@@ -1,3 +1,8 @@
-.mat-card-footer {
-  margin-top: 7px;
+h1 {
+  margin-top: 2%;
+}
+
+.mat-form-field, button {
+  margin-top: 5%;
+  display: block;
 }
