--- a/client/src/app/forum/show-post/show-post.component.html
+++ b/client/src/app/forum/show-post/show-post.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="col-6">
     <h3><b>Author:</b>&nbsp;<a [routerLink]="['/profile', post.username]" routerLinkActive="router-link-active">{{post.username}}</a></h3>
-    <h3><b>Date:</b> {{post.date}}</h3>
+    <h3><b>Date:</b> {{post.date}} <b>Time:</b> {{post.time}}</h3>
   </div>
 </div>
 <div class="row header-content">
