--- a/client/src/app/challenge/challenge.component.html
+++ b/client/src/app/challenge/challenge.component.html
@@ -1,16 +1,13 @@
 <button class="btn btn-primary ribbon" (click)="makeChallenge()">Challenge other person</button>
 
-<mat-grid-list cols="3" rowHeight="40rem" [gutterSize]="'10px'">
-  <mat-grid-tile>
-    <mat-grid-tile-header>Pending</mat-grid-tile-header>
-
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-grid-tile-header>Submited</mat-grid-tile-header>
-      <app-list-pending-challenges></app-list-pending-challenges>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-grid-tile-header>Completed</mat-grid-tile-header>
+<div class="row">
+  <div class="col">
+    <app-list-pending-challenges></app-list-pending-challenges>
+  </div>
+  <div class="col">
+    <app-list-submited-challenges></app-list-submited-challenges>
+  </div>
+  <div class="col">
     <app-list-completed-challenges></app-list-completed-challenges>
-  </mat-grid-tile>
-</mat-grid-list>
+  </div>
+</div>
