--- a/client/src/app/challenge/list-pending-challenges/list-pending-challenges.component.css
+++ b/client/src/app/challenge/list-pending-challenges/list-pending-challenges.component.css
@@ -1,3 +1,15 @@
 h1 {
   font-weight: bold;
 }
+
+table {
+  opacity: 0.85;
+}
+
+tbody {
+  background-color: #FFFFFF;
+}
+
+#action {
+  text-align: center;
+}
